fix: scrollbar no longer shifts page contents when visible

--- a/app/globals.css
+++ b/app/globals.css
@@ -16,6 +16,10 @@
   --foreground: #ffffff;
 }
 
+html {
+  scrollbar-gutter: stable;
+}
+
 body {
   font-family: sans-serif, Arial, Helvetica;
   background-color: var(--background);
